--- a/exercici1.html
+++ b/exercici1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <link rel="stylesheet" type="text/css" href="css/exercici1.css">
+    <link rel="stylesheet" type="text/css" href="css/exercici.css">
     <title>Exercici 1</title>
 </head>
 <body>
